# Crucible

./: .gitgnore  .gitignore  README.md  app.py  app.py.backup  config.py  crucible_context.txt  forge.py  github  github.pub  pyproject.toml  requirements.txt
.github/workflows/: build.yml
data/: XSS.json  errorSignature.json  fuzzdb_sqli_arsenal.json  hackerone.csv  lfi.json  payloads.json
reports/: scan_report_20260226_202258.json  scan_report_20260227_124625.json  scan_report_20260227_130805.json  scan_report_20260227_132852.json  scan_report_20260306_131600.json  scan_report_20260312_040521.json  scan_report_20260312_040941.json  scan_report_20260312_041452.json  scan_report_20260312_041923.json  scan_report_20260312_041931.json  scan_report_20260312_143924.json  scan_report_20260312_143932.json  scan_report_20260316_144956.json  scan_report_20260316_145001.json  scan_report_20260317_000317.json  scan_report_20260317_000320.json  scan_report_20260317_143032.json  scan_report_20260317_143035.json  scan_report_latest.json
static/css/: style.css
static/js/: main.js
templates/: history.html  index.html
test-lab/: app.py  crucible_lab.db  db.py
test-lab/templates/: index.html  login.html  products.html  search.html
