[project]
name = "crucible"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "astunparse>=1.6.3",
    "beautifulsoup4>=4.14.3",
    "fastmcp>=3.1.0",
    "flask>=3.1.2",
    "google-generativeai>=0.8.6",
    "lxml>=6.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "six>=1.17.0",
]
